// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<body>
  <div>
    <div
      class="ui-latex "
    >
      <h3>
        Fermat’s Last Theorem
      </h3>
       
      <span
        class="inline-math"
      >
        <span
          class="katex"
        >
          <span
            class="katex-mathml"
          >
            <math
              xmlns="http://www.w3.org/1998/Math/MathML"
            >
              <semantics>
                <mrow>
                  <msup>
                    <mi>
                      a
                    </mi>
                    <mi>
                      n
                    </mi>
                  </msup>
                  <mo>
                    +
                  </mo>
                  <msup>
                    <mi>
                      b
                    </mi>
                    <mi>
                      n
                    </mi>
                  </msup>
                  <mo
                    mathvariant="normal"
                  >
                    ≠
                  </mo>
                  <msup>
                    <mi>
                      c
                    </mi>
                    <mi>
                      n
                    </mi>
                  </msup>
                </mrow>
                <annotation
                  encoding="application/x-tex"
                >
                  a^{n} + b^{n} \\ne c^{n}
                </annotation>
              </semantics>
            </math>
          </span>
          <span
            aria-hidden="true"
            class="katex-html"
          >
            <span
              class="base"
            >
              <span
                class="strut"
                style="height: 0.7477em; vertical-align: -0.0833em;"
              />
              <span
                class="mord"
              >
                <span
                  class="mord mathnormal"
                >
                  a
                </span>
                <span
                  class="msupsub"
                >
                  <span
                    class="vlist-t"
                  >
                    <span
                      class="vlist-r"
                    >
                      <span
                        class="vlist"
                        style="height: 0.6644em;"
                      >
                        <span
                          class=""
                          style="top: -3.063em; margin-right: 0.05em;"
                        >
                          <span
                            class="pstrut"
                            style="height: 2.7em;"
                          />
                          <span
                            class="sizing reset-size6 size3 mtight"
                          >
                            <span
                              class="mord mtight"
                            >
                              <span
                                class="mord mathnormal mtight"
                              >
                                n
                              </span>
                            </span>
                          </span>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </span>
              <span
                class="mspace"
                style="margin-right: 0.2222em;"
              />
              <span
                class="mbin"
              >
                +
              </span>
              <span
                class="mspace"
                style="margin-right: 0.2222em;"
              />
            </span>
            <span
              class="base"
            >
              <span
                class="strut"
                style="height: 0.8889em; vertical-align: -0.1944em;"
              />
              <span
                class="mord"
              >
                <span
                  class="mord mathnormal"
                >
                  b
                </span>
                <span
                  class="msupsub"
                >
                  <span
                    class="vlist-t"
                  >
                    <span
                      class="vlist-r"
                    >
                      <span
                        class="vlist"
                        style="height: 0.6644em;"
                      >
                        <span
                          class=""
                          style="top: -3.063em; margin-right: 0.05em;"
                        >
                          <span
                            class="pstrut"
                            style="height: 2.7em;"
                          />
                          <span
                            class="sizing reset-size6 size3 mtight"
                          >
                            <span
                              class="mord mtight"
                            >
                              <span
                                class="mord mathnormal mtight"
                              >
                                n
                              </span>
                            </span>
                          </span>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </span>
              <span
                class="mspace"
                style="margin-right: 0.2778em;"
              />
              <span
                class="mrel"
              >
                <span
                  class="mrel"
                >
                  <span
                    class="mord vbox"
                  >
                    <span
                      class="thinbox"
                    >
                      <span
                        class="rlap"
                      >
                        <span
                          class="strut"
                          style="height: 0.8889em; vertical-align: -0.1944em;"
                        />
                        <span
                          class="inner"
                        >
                          <span
                            class="mord"
                          >
                            <span
                              class="mrel"
                            >
                              
                            </span>
                          </span>
                        </span>
                        <span
                          class="fix"
                        />
                      </span>
                    </span>
                  </span>
                </span>
                <span
                  class="mrel"
                >
                  =
                </span>
              </span>
              <span
                class="mspace"
                style="margin-right: 0.2778em;"
              />
            </span>
            <span
              class="base"
            >
              <span
                class="strut"
                style="height: 0.6644em;"
              />
              <span
                class="mord"
              >
                <span
                  class="mord mathnormal"
                >
                  c
                </span>
                <span
                  class="msupsub"
                >
                  <span
                    class="vlist-t"
                  >
                    <span
                      class="vlist-r"
                    >
                      <span
                        class="vlist"
                        style="height: 0.6644em;"
                      >
                        <span
                          class=""
                          style="top: -3.063em; margin-right: 0.05em;"
                        >
                          <span
                            class="pstrut"
                            style="height: 2.7em;"
                          />
                          <span
                            class="sizing reset-size6 size3 mtight"
                          >
                            <span
                              class="mord mtight"
                            >
                              <span
                                class="mord mathnormal mtight"
                              >
                                n
                              </span>
                            </span>
                          </span>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </span>
            </span>
          </span>
        </span>
      </span>
      , 
      <span
        class="inline-math"
      >
        <span
          class="katex"
        >
          <span
            class="katex-mathml"
          >
            <math
              xmlns="http://www.w3.org/1998/Math/MathML"
            >
              <semantics>
                <mrow>
                  <mi>
                    a
                  </mi>
                  <mo
                    separator="true"
                  >
                    ,
                  </mo>
                  <mi>
                    b
                  </mi>
                  <mo
                    separator="true"
                  >
                    ,
                  </mo>
                  <mi>
                    c
                  </mi>
                  <mo
                    separator="true"
                  >
                    ,
                  </mo>
                  <mi>
                    n
                  </mi>
                  <mo>
                    ∈
                  </mo>
                  <mi
                    mathvariant="double-struck"
                  >
                    N
                  </mi>
                </mrow>
                <annotation
                  encoding="application/x-tex"
                >
                  a, b, c, n \\in \\N
                </annotation>
              </semantics>
            </math>
          </span>
          <span
            aria-hidden="true"
            class="katex-html"
          >
            <span
              class="base"
            >
              <span
                class="strut"
                style="height: 0.8889em; vertical-align: -0.1944em;"
              />
              <span
                class="mord mathnormal"
              >
                a
              </span>
              <span
                class="mpunct"
              >
                ,
              </span>
              <span
                class="mspace"
                style="margin-right: 0.1667em;"
              />
              <span
                class="mord mathnormal"
              >
                b
              </span>
              <span
                class="mpunct"
              >
                ,
              </span>
              <span
                class="mspace"
                style="margin-right: 0.1667em;"
              />
              <span
                class="mord mathnormal"
              >
                c
              </span>
              <span
                class="mpunct"
              >
                ,
              </span>
              <span
                class="mspace"
                style="margin-right: 0.1667em;"
              />
              <span
                class="mord mathnormal"
              >
                n
              </span>
              <span
                class="mspace"
                style="margin-right: 0.2778em;"
              />
              <span
                class="mrel"
              >
                ∈
              </span>
              <span
                class="mspace"
                style="margin-right: 0.2778em;"
              />
            </span>
            <span
              class="base"
            >
              <span
                class="strut"
                style="height: 0.6889em;"
              />
              <span
                class="mord mathbb"
              >
                N
              </span>
            </span>
          </span>
        </span>
      </span>
      , 
      <span
        class="inline-math"
      >
        <span
          class="katex"
        >
          <span
            class="katex-mathml"
          >
            <math
              xmlns="http://www.w3.org/1998/Math/MathML"
            >
              <semantics>
                <mrow>
                  <mi>
                    n
                  </mi>
                  <mo>
                    ≥
                  </mo>
                  <mn>
                    3
                  </mn>
                </mrow>
                <annotation
                  encoding="application/x-tex"
                >
                  n \\ge 3
                </annotation>
              </semantics>
            </math>
          </span>
          <span
            aria-hidden="true"
            class="katex-html"
          >
            <span
              class="base"
            >
              <span
                class="strut"
                style="height: 0.7719em; vertical-align: -0.136em;"
              />
              <span
                class="mord mathnormal"
              >
                n
              </span>
              <span
                class="mspace"
                style="margin-right: 0.2778em;"
              />
              <span
                class="mrel"
              >
                ≥
              </span>
              <span
                class="mspace"
                style="margin-right: 0.2778em;"
              />
            </span>
            <span
              class="base"
            >
              <span
                class="strut"
                style="height: 0.6444em;"
              />
              <span
                class="mord"
              >
                3
              </span>
            </span>
          </span>
        </span>
      </span>
    </div>
  </div>
</body>
`;

exports[`renders correctly 2`] = `
<body>
  <div>
    <div
      class="ui-latex "
    >
      a^b = 
      <span
        class="inline-math"
      >
        <span
          class="katex"
        >
          <span
            class="katex-mathml"
          >
            <math
              xmlns="http://www.w3.org/1998/Math/MathML"
            >
              <semantics>
                <mrow>
                  <msup>
                    <mi>
                      a
                    </mi>
                    <mi>
                      b
                    </mi>
                  </msup>
                </mrow>
                <annotation
                  encoding="application/x-tex"
                >
                  a^{b}
                </annotation>
              </semantics>
            </math>
          </span>
          <span
            aria-hidden="true"
            class="katex-html"
          >
            <span
              class="base"
            >
              <span
                class="strut"
                style="height: 0.8491em;"
              />
              <span
                class="mord"
              >
                <span
                  class="mord mathnormal"
                >
                  a
                </span>
                <span
                  class="msupsub"
                >
                  <span
                    class="vlist-t"
                  >
                    <span
                      class="vlist-r"
                    >
                      <span
                        class="vlist"
                        style="height: 0.8491em;"
                      >
                        <span
                          class=""
                          style="top: -3.063em; margin-right: 0.05em;"
                        >
                          <span
                            class="pstrut"
                            style="height: 2.7em;"
                          />
                          <span
                            class="sizing reset-size6 size3 mtight"
                          >
                            <span
                              class="mord mtight"
                            >
                              <span
                                class="mord mathnormal mtight"
                              >
                                b
                              </span>
                            </span>
                          </span>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </span>
            </span>
          </span>
        </span>
      </span>
    </div>
  </div>
</body>
`;

exports[`renders correctly 3`] = `
<body>
  <div>
    <div
      class="ui-latex "
    >
      â, â, ^a
    </div>
  </div>
</body>
`;

exports[`renders correctly 4`] = `
<body>
  <div>
    <div
      class="ui-latex "
    >
      <u
        class="underline"
      >
        Underline
      </u>
       
      <b
        class="textbf"
      >
        Bold
      </b>
       
      <span
        class="inline-math"
      >
        <span
          class="katex"
        >
          <span
            class="katex-mathml"
          >
            <math
              xmlns="http://www.w3.org/1998/Math/MathML"
            >
              <semantics>
                <mrow>
                  <mi
                    mathvariant="bold"
                  >
                    B
                  </mi>
                  <mi
                    mathvariant="bold"
                  >
                    o
                  </mi>
                  <mi
                    mathvariant="bold"
                  >
                    l
                  </mi>
                  <mi
                    mathvariant="bold"
                  >
                    d
                  </mi>
                  <mn
                    mathvariant="bold"
                  >
                    2
                  </mn>
                </mrow>
                <annotation
                  encoding="application/x-tex"
                >
                  \\bf{Bold2}
                </annotation>
              </semantics>
            </math>
          </span>
          <span
            aria-hidden="true"
            class="katex-html"
          >
            <span
              class="base"
            >
              <span
                class="strut"
                style="height: 0.6944em;"
              />
              <span
                class="mord"
              >
                <span
                  class="mord"
                >
                  <span
                    class="mord mathbf"
                  >
                    Bold2
                  </span>
                </span>
              </span>
            </span>
          </span>
        </span>
      </span>
       
      <b
        class="textbf"
      >
        Bold3
      </b>
       Normal
    </div>
  </div>
</body>
`;
